refactor: clean up CORS configuration and improve code readability in AuthController, SecurityConfig, and DTOs